Fix scrollbar bug casuing repositioning

--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@ body {
     background-color: snow;
     padding-left: 10%;
     width: 80%;
-
+    overflow-y: scroll;
 
 }
 
